adding routes on book
